src/objects/Supplier_Staging__c.object
<CustomObject>
    <description>Storing Supplier Master Data from EDP</description>
    <fields>
        <fullName>Active_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Lifecycle_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Lifecycle Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Supplier_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Supplier Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP_ActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP_ActiveStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP_LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Of_Street_District__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name Of Street District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Supplier ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZIP_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ZIP Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Supplier Staging</label>
    <nameField>
        <displayFormat>s-{00000}</displayFormat>
        <label>Supplier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>